src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ApexFlg2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApexFlg2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApexFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>トリガ実行フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ikoutest__c</fullName>
        <defaultValue>1</defaultValue>
        <label>移行試験</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KTypeChg__c</fullName>
        <label>型変更テスト</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf4twitter__Author_External_Id__c</fullName>
        <label>Author External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Author Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__twitterId__c</fullName>
        <externalId>true</externalId>
        <label>Conversation External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>GroupMail_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InternationalEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>InternationalEscalations</queue>
    </listViews>
    <listViews>
        <fullName>InternationalPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Platinum/Gold</label>
        <queue>InternationalPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>InternationalSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Silver/Bronze</label>
        <queue>InternationalSilverBronze</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PartnerRelations</fullName>
        <filterScope>Queue</filterScope>
        <label>Partner Relations</label>
        <queue>PartnerRelations</queue>
    </listViews>
    <listViews>
        <fullName>USEscalations</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Escalations</label>
        <queue>USEscalations</queue>
    </listViews>
    <listViews>
        <fullName>USPlatinumGold</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Platinum/Gold</label>
        <queue>USPlatinumGold</queue>
    </listViews>
    <listViews>
        <fullName>USSilverBronze</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Silver/Bronze</label>
        <queue>USSilverBronze</queue>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>